--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -33,7 +33,7 @@ layout: default
 <ul>
   {% for post in month.items %}
     <li>
-      <a href="{{ post.url }}">{{ post.title }}</a>
+      <a href="{{ post.url | prepend:site.baseurl }}">{{ post.title }}</a>
       <br>{{ post.excerpt }}
     </li>
   {% endfor %}
